JRADEV-16148: it's almost possible to set multiple groups

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -6,7 +6,7 @@ cpji.admin.successful.saved=You have successfuly saved settings
 cpji.admin.there.were.problems=There were some problems when saving the configuration.
 
 cpji.admin.fields.group.name=User group
-cpji.admin.fields.group.description=Only users of this group can copy to another JIRA project.
+cpji.admin.fields.group.description=<strong>Note:</strong> When list is empty all logged-in users can copy issues to another JIRA project.
 cpji.admin.fields.group.everyone=everyone
 cpji.admin.fields.usermapping.name=User Mapping
 cpji.admin.fields.usermapping.description=Users from the remote JIRA instance are mapped by using the selected mapping type. This user mapping is used when copying field values of the assignee, comment, reporter, voter and watcher field.
@@ -38,6 +38,6 @@ cpji.remote.link.nolink=None
 cpji.config.default.value=Saved default value for field ''{0}''
 cpji.config.default.empty.value=Deleted default value for field ''{0}''
 cpji.config.user.mapping=Saved user mapping configuration.
-cpji.config.user.group=Saved user group restriction.
-cpji.config.user.group.remove=Removed user group restriction.
+cpji.config.user.group=Saved user groups restriction.
+cpji.config.user.group.remove=Removed user groups restriction.
 cpji.select.destination.project=Select destination project
