JRADEV-16148: it's possible to set multiple groups

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -5,7 +5,7 @@ cpji.admin.title=Configure Remote Issue Copy
 cpji.admin.successful.saved=You have successfuly saved settings
 cpji.admin.there.were.problems=There were some problems when saving the configuration.
 
-cpji.admin.fields.group.name=User group
+cpji.admin.fields.groups.name=Allowed Groups
 cpji.admin.fields.group.description=<strong>Note:</strong> When list is empty all logged-in users can copy issues to another JIRA project.
 cpji.admin.fields.group.everyone=everyone
 cpji.admin.fields.usermapping.name=User Mapping
