--- a/pom.xml
+++ b/pom.xml
@@ -238,7 +238,7 @@
         <my.sal.version>2.6.1</my.sal.version>
         <rest.version>2.7.1</rest.version>
         <applinks.version>3.5.6</applinks.version>
-		<testkit.version>5.0-m15</testkit.version>
+		<testkit.version>5.16</testkit.version>
 		<amps.version>4.0</amps.version>
 		<atlassian.selenium.version>2.1-m18</atlassian.selenium.version>
 		<jersey.version>1.8-atlassian-6</jersey.version>
