--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -73,6 +73,10 @@
             <version>0.20</version>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>com.atlassian.jira.tests</groupId>
+			<artifactId>jira-func-test-basics</artifactId>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
