JRADEV-16151: changed section's title to "incoming issues"

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -11,7 +11,7 @@ cpji.admin.fields.group.everyone=everyone
 cpji.admin.fields.usermapping.name=User Mapping
 cpji.admin.fields.usermapping.description=Users from the remote JIRA instance are mapped by using the selected mapping type. This user mapping is used when copying field values of the assignee, comment, reporter, voter and watcher field.
 
-cpji.admin.default.values.header=Default values for incoming projects
+cpji.admin.default.values.header=Default values for incoming issues
 cpji.admin.default.values=These default values will be applied if the remote issue does not contain a value.
 
 cpji.field.validation.ok=This field will be copied across and the field value(s) will be retained.
