JRADEV-16530: seems ConfigureCopyIssuesAdminActionPage.java works with 5.0.7 and 5.1.8

--- a/pom.xml
+++ b/pom.xml
@@ -333,6 +333,12 @@
 				<atlassian.selenium.version>2.1-m14</atlassian.selenium.version>
 			</properties>
 		</profile>
+		<profile>
+			<id>jira-5.1.x</id>
+			<properties>
+				<jira.version>5.1.8</jira.version>
+			</properties>
+		</profile>
 	</profiles>
 
     <scm>
