--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -42,3 +42,9 @@ cpji.config.user.mapping=Saved user mapping configuration.
 cpji.config.user.group=Saved user groups restriction.
 cpji.config.user.group.remove=Removed user groups restriction.
 cpji.select.destination.project=Select destination project
+
+cpji.you.need.to.log.in=You need to log in and approve to use following servers:
+cpji.authentication.failed=Authentication failed with:
+cpji.communication.failed=Communication failed with:
+cpji.remote.copying.not.installed=Remote copying of issues is not installed on:
+cpji.please.contact.admin=There was a problem connecting to one of the servers. Please contact your administrator.
