JRADEV-16427: added jira3 instance which was missing

--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -222,6 +222,7 @@
                             <productIds>
                                 <productId>jira1</productId>
                                 <productId>jira2</productId>
+                                <productId>jira3</productId>
                             </productIds>
                             <includes>
                                 <include>it/**</include>
