JRADEV-17102: i18n for copydetails.vm

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -48,3 +48,20 @@ cpji.authentication.failed=Authentication failed with:
 cpji.communication.failed=Communication failed with:
 cpji.remote.copying.not.installed=Remote copying of issues is not installed on:
 cpji.please.contact.admin=There was a problem connecting to one of the servers. Please contact your administrator.
+
+cpji.select.new.issue.type=Select a new issue type
+cpji.select.project=Select project
+cpji.select.issue.type=Select Issue Type
+cpji.confirmation=Confirmation
+cpji.issue.type=Issue Type
+cpji.remote.user=Remote user
+cpji.user.name=User name
+cpji.user.full.name=User Full Name
+cpji.optional.copy.items=What optional items to copy
+cpji.attachments=Attachments
+cpji.attachments.not.moved.sal=Attachments are not moved until we have upgraded JIRA''s SAL version.
+cpji.attachments.will.be.copied=Attachments will be copied.
+cpji.attachments.are.disabled=Attachments are disabled in the remote JIRA instance.
+cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the remote JIRA instance.
+cpji.copy.issue.links=Issue Links
+cpji.create.issue.link=Create Issue Link
