JRADEV-16759: changed layout of optional items, they will be on the right next to the checkbox

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -65,3 +65,4 @@ cpji.attachments.are.disabled=Attachments are disabled in the remote JIRA instan
 cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the remote JIRA instance.
 cpji.copy.issue.links=Issue Links
 cpji.create.issue.link=Create Issue Link
+cpji.copy.comments=Comments
