--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -57,12 +57,14 @@ cpji.issue.type=Issue Type
 cpji.remote.user=Remote user
 cpji.user.name=User name
 cpji.user.full.name=User Full Name
-cpji.optional.copy.items=What optional items to copy
-cpji.attachments=Attachments
+cpji.advanced=Advanced
+cpji.copy.attachments=Copy Attachments
 cpji.attachments.not.moved.sal=Attachments are not moved until we have upgraded JIRA''s SAL version.
 cpji.attachments.will.be.copied=Attachments will be copied.
 cpji.attachments.are.disabled=Attachments are disabled in the remote JIRA instance.
 cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the remote JIRA instance.
-cpji.copy.issue.links=Issue Links
+cpji.copy.issue.links=Copy Issue Links
 cpji.create.issue.link=Create Issue Link
-cpji.copy.comments=Comments
+cpji.copy.comments=Copy Comments
+cpji.you.dont.have.create.issue.permission=You don''t have the create issue permission for this JIRA project!
+cpji.remote.issue.linking.is.disabled=Destination JIRA has issue linking disabled.
