--- a/pom.xml
+++ b/pom.xml
@@ -247,11 +247,18 @@
 				<artifactId>jsr305</artifactId>
 				<version>2.0.0</version>
 			</dependency>
-			<!--dependency>
-				<groupId>com.sun.jersey</groupId>
-				<artifactId>jersey-core</artifactId>
-				<version>${jersey.version}</version>
-			</dependency-->
+			<dependency>
+				<groupId>com.sun.jersey.contribs</groupId>
+				<artifactId>jersey-multipart</artifactId>
+				<version>1.8-atlassian-1</version>
+				<scope>compile</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>com.sun.jersey</groupId>
+						<artifactId>jersey-core</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
 			<!--dependency>
 				<groupId>com.sun.jersey</groupId>
 				<artifactId>jersey-json</artifactId>
