--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
 				<version>1.7R2.0</version>
 				<scope>compile</scope>
 			</dependency>
+            <dependency>
+                <groupId>com.atlassian.jira</groupId>
+                <artifactId>jira-tests</artifactId>
+                <version>${jira.version}</version>
+                <scope>test</scope>
+            </dependency>
 
 			<!-- REST dependencies-->
 			<dependency>
