--- a/pom.xml
+++ b/pom.xml
@@ -312,7 +312,7 @@
 			<id>jira-5.2.x</id>
 			<properties>
 				<jira.version>5.2</jira.version>
-				<testkit.version>5.2-m23</testkit.version>
+				<testkit.version>6.0.1</testkit.version>
 			</properties>
 		</profile>
 		<profile>
