JRADEV-16759: if remote JIRA doesn't support linking or attachments but the original issue have them set there will be explanatory messages set and controls will be disabled

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -61,7 +61,7 @@ cpji.advanced=Advanced
 cpji.copy.attachments=Copy Attachments
 cpji.attachments.not.moved.sal=Attachments are not moved until we have upgraded JIRA''s SAL version.
 cpji.attachments.will.be.copied=Attachments will be copied.
-cpji.attachments.are.disabled=Attachments are disabled in the remote JIRA instance.
+cpji.attachments.are.disabled=Attachments are disabled in the destination JIRA instance.
 cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the remote JIRA instance.
 cpji.copy.issue.links=Copy Issue Links
 cpji.create.issue.link=Create Issue Link
