--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -43,6 +43,14 @@ cpji.config.user.group=Saved user groups restriction.
 cpji.config.user.group.remove=Removed user groups restriction.
 cpji.select.destination.project=Select destination project
 
+
+cpji.errors.authentication.failed=Authentication failed. If using Trusted Apps, do you have a user with the same user name in the remote JIRA instance?
+cpji.errors.oauth.token.invalid=OAuth token invalid.
+cpji.errors.failed.to.retrieve.issue.fields=Failed to retrieve the list of issue fields from the remote JIRA instance.
+cpji.errors.plugin.not.installed=Remote copy plugin is not installed.
+cpji.errors.communication.failed=Remote copy couldn't communicate with remote JIRA instance.
+cpji.errors.error.occured.generic=Error occured when remote JIRA instance was processing request.
+
 cpji.you.need.to.log.in=You need to log in and approve to use following servers:
 cpji.authentication.failed=Authentication failed with:
 cpji.communication.failed=Communication failed with:
