NONE: resue GlobalIdFactory from jira-view-issue-plugin

--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -111,6 +111,10 @@
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>jsr305</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.atlassian.jira</groupId>
+            <artifactId>jira-view-issue-plugin</artifactId>
+        </dependency>
 	</dependencies>
 
     <build>
