--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -50,6 +50,7 @@ cpji.errors.failed.to.retrieve.issue.fields=Failed to retrieve the list of issue
 cpji.errors.plugin.not.installed=Remote copy plugin is not installed.
 cpji.errors.communication.failed=Remote copy couldn't communicate with remote JIRA instance.
 cpji.errors.error.occured.generic=Error occured when remote JIRA instance was processing request.
+cpji.errors.issue.created.with.errors=Created issue ''{0}'', but unfortunately there were some errors.
 
 cpji.you.need.to.log.in=You need to log in and approve to use following servers:
 cpji.authentication.failed=Authentication failed with:
