--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -114,6 +114,10 @@
 			<artifactId>scala-library</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+        <dependency>
+            <groupId>com.atlassian.jira</groupId>
+            <artifactId>jira-view-issue-plugin</artifactId>
+        </dependency>
 	</dependencies>
     <build>
         <plugins>
