--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -91,6 +91,12 @@
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-tests</artifactId>
             <scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.mockito</groupId>
+					<artifactId>mockito-all</artifactId>
+				</exclusion>
+			</exclusions>
         </dependency>
 		<dependency>
 			<groupId>com.atlassian.jira.tests</groupId>
