--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -124,6 +124,10 @@
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-view-issue-plugin</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
