--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,12 @@
                 <version>${jira.version}</version>
                 <scope>provided</scope>
             </dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>1.9.0</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
