JRADEV-16758: Cancelling action, current project is selected as default, showing RIC also when users has create issue permission on local projects, simple test for issue copying

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -76,4 +76,5 @@ cpji.copy.issue.links=Copy Issue Links
 cpji.create.issue.link=Create Issue Link
 cpji.copy.comments=Copy Comments
 cpji.you.dont.have.create.issue.permission=You don''t have the create issue permission for this JIRA project!
+cpji.you.dont.have.create.issue.permission.for.any.project=You can''t clone issue. You don''t have the create issue permission for any JIRA project
 cpji.remote.issue.linking.is.disabled=Destination JIRA has issue linking disabled.
