--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -130,6 +130,7 @@
                 <version>${amps.version}</version>
                 <extensions>true</extensions>
                 <configuration>
+					<extractDependencies>false</extractDependencies>
                     <products>
                         <product>
                             <id>jira</id>
